# NLP-project

./: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_code.py
app/: streamlit_app.py
docs/: INSTALL.md  USER_MANUAL.md
docs/reflections/: alberto.md  felipe.md  jan.md  kishan.md  vlad.md  yi.md
docs/report/: executive_summary.md  failure_analysis.md  field_review.md  slides.md  technical_report.md  use_of_ai_tools.md
eval/: metrics.py  run_eval.py
eval/data/: atc_readback_test_set.csv
eval/results/: failures.md  metrics.json  metrics.md  predictions.csv
eval/results/runs/: README.md
eval/results/runs/3b_baseline_v1/: failures.md  metrics.json  metrics.md  predictions.csv
eval/results/runs/3b_final_v3/: failures.md  metrics.md
eval/results/runs/3b_improved_v2/: failures.md  metrics.json  metrics.md  predictions.csv
eval/results/runs/7b_final_v3/: failures.md  metrics.json  metrics.md  predictions.csv
notebooks/: analysis.ipynb  build_notebook.py
pipe/: .gitignore  README.md  requirements.txt
src/atc_verifier/: __init__.py  compare.py  schema.py  verdict.py
src/atc_verifier/extract/: __init__.py  base.py  hf_backend.py  ollama_backend.py
src/atc_verifier/extract/prompts/: extract_fields.txt
tests/: test_compare.py  test_compare_coverage.py  test_extract.py  test_metrics.py
